<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unibus</string>
    <string name="unibus_logo">UniBus</string>
    <string name="back_button_desc">Voltar</string>
    <string name="btn_ok">OK</string>

    <!-- Erros Gerais -->
    <string name="error_unexpected">Erro inesperado</string>
    <string name="error_description">Oops! Algo deu errado&#8230; Mas fique tranquilo(a), nossa equipe já está correndo para resolver. Tente novamente mais tarde!</string>

    <!-- Tela Inicial do Motorista -->
    <string name="driver_greeting">Olá, Motora!</string>
    <string name="driver_id">2121054</string>
    <string name="notices_title">Avisos</string>
    <string name="notice_subject">Unibus - Rota Indisponível</string>
    <string name="notice_date">24/01/2025</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin imperdiet metus nec lacus dictum ultrices.</string>
    <string name="btn_start_route">Iniciar Rota</string>
    <string name="nav_home">Início</string>
    <string name="nav_preferences">Preferências</string>
    <string name="nav_support">Suporte</string>

    <!-- Tela Inicial Admin -->
    <string name="admin_greeting">Olá, Admin</string>
    <string name="label_active_students">Alunos ativos:</string>
    <string name="label_drivers">Motorista:</string>
    <string name="label_trips">Viagens:</string>
    <string name="label_tickets">Chamados:</string>
    <string name="btn_general_stats">Estatísticas Gerais</string>
    <string name="btn_manage_routes">Gerenciar Rotas</string>
    <string name="btn_manage_users">Gerenciar Usuário</string>
    <string name="btn_reports">Relatórios</string>

    <!-- Tela Chamados Admin -->
    <string name="title_tickets_admin">Chamados</string>
    <string name="title_latest_tickets">Últimos chamados</string>
    <string name="btn_see_more">ver mais</string>

    <!-- Tela Relatórios -->
    <string name="title_reports">Relatórios</string>
    <string name="label_filters">Filtros:</string>
    <string name="tab_invalid_attempts">Tentativas\nInválidas</string>
    <string name="tab_usage_peaks">Picos de Uso</string>
    <string name="tab_accessibility">Solicitações de\nAcessibilidade</string>
    <string name="report_qr_invalid">QR inválido - %1$s</string>

    <!-- Tela Gerenciar Usuários -->
    <string name="title_manage_users">Gerenciar Usuários</string>
    <string name="hint_search_user">Pesquisar por nome\nou matrícula:</string>
    <string name="btn_generate_qr">GERAR QR</string>
    <string name="label_liberado">Liberado</string>
    <string name="label_qr_code_status">QR code</string>

    <!-- Tela Gerenciar Rotas -->
    <string name="title_manage_routes">Gerenciar Rotas</string>
    <string name="btn_new_route">+ Nova Rota</string>
    <string name="label_route">Rota:</string>
    <string name="label_schedules">Horários:</string>
    <string name="btn_edit">EDITAR</string>
    <string name="btn_delete">EXCLUIR</string>

    <!-- Tela Criar/Editar Rota -->
    <string name="label_route_name">Nome da Rota:</string>
    <string name="label_direction">Sentido:</string>
    <string name="btn_cancel">CANCELAR</string>
    <string name="btn_save">SALVAR</string>

    <!-- Tela Estatísticas -->
    <string name="title_statistics">Estatísticas</string>
    <string name="label_period">Período</string>
    <string name="date_start_default">01/04/2025</string>
    <string name="date_end_default">30/04/2025</string>
    <string name="title_top_routes">Top rotas:</string>
    <string name="route_parangaba_stat">Parangaba - 420 usos</string>
    <string name="route_papicu_stat">Ant. Bezerra / Papicu - 300 usos</string>
    <string name="title_usage_by_time">Uso por horário:</string>
    <string name="choose_date_title">Escolha a data desejada:</string>
    <string name="month_year_sample">Abril de 2025</string>

    <!-- Popup Iniciar Rota -->
    <string name="popup_start_route_title">Iniciar rota</string>
    <string name="popup_start_route_instruction">Selecione a rota que deseja iniciar</string>
    <string name="route_parangaba">Parangaba</string>
    <string name="route_ant_bezerra">Ant. Bezerra / Papicu</string>
    <string name="route_messejana">Messejana / Eusébio</string>

    <!-- Popup Selecionar Origem -->
    <string name="popup_select_origin_title">Selecionar origem</string>
    <string name="popup_select_origin_instruction">Selecione o ponto de partida</string>
    <string name="origin_terminal">Terminal</string>
    <string name="origin_campus">Campus</string>

    <!-- Tela Ler QR Code -->
    <string name="scan_qr_instruction">Aponte a câmara para o código QR</string>
    <string name="qr_instruction">Aponte a câmera para o QR Code</string>

    <!-- Tela Rota em Andamento / Capacidade -->
    <string name="title_route_started">Rota Iniciada</string>
    <string name="current_route_detail">Terminal Ant. Bezerra / Papicu</string>
    <string name="label_occupied_seats">Vagas ocupadas</string>
    <string name="label_free_seats">Vagas livres</string>
    <string name="btn_scan_qr_code">LER QR CODE</string>
    <string name="btn_map">MAPA</string>

    <!-- Status de Entrada -->
    <string name="entry_allowed">Entrada liberada!</string>
    <string name="entry_denied">Entrada recusada</string>
    <string name="full_capacity_title">Lotação atingida</string>
    <string name="full_capacity_desc">Atenção, a capacidade máxima desse veículo foi atingida!</string>

    <!-- Rota Indisponível -->
    <string name="route_unavailable_title">Rota indisponível</string>
    <string name="route_unavailable_description">Não conseguimos acessar essa parte do app no momento. A rota solicitada está temporariamente indisponível. Por favor, tente novamente mais tarde.</string>

    <!-- Suporte -->
    <string name="support_title">Suporte</string>
    <string name="hint_name">Seu nome</string>
    <string name="hint_id">Sua matrícula</string>
    <string name="hint_email">Seu email</string>
    <string name="hint_description">Conte o que aconteceu</string>
    <string name="btn_send">Enviar</string>
    <string name="support_success_title">Solicitação enviada com sucesso!</string>
    <string name="support_success_description">Obrigado por nos contatar, em até 24 horas nossa equipe lhe retornará por email</string>
    <string name="btn_back_to_start">Retornar ao início</string>

    <!-- Avisos -->
    <string name="btn_add_message">ADICIONAR MENSAGEM</string>
    <string name="title_add_aviso">Avisos</string>
    <string name="title_avisos">Avisos</string>
    <string name="hint_digite_aviso">Digite o aviso</string>
    <string name="btn_enviar">ENVIAR</string>
    <string name="msg_enviada_sucesso">Mensagem enviada com sucesso!</string>
    <string name="btn_retornar_inicio">Retornar ao início</string>

    <!-- Confirmações -->
    <string name="sim">SIM</string>
<<<<<<< HEAD
    <string name="msg_confirm_delete_route">Tem certeza que deseja excluir a rota:</string>
    <string name="route_papicu_campus_full">Rota : Papicu > Campus</string>
    <string name="route_parangaba_campus_full">Rota : Parangaba > Campus</string>
    <string name="nao">NÃO</string>
</resources>
=======
    <string name="nao">NÃO</string>
    <string name="msg_confirm_delete_route">Tem certeza que deseja excluir a rota:</string>
    <string name="route_papicu_campus_full">Rota : Papicu > Campus</string>
    <string name="route_parangaba_campus_full">Rota : Parangaba > Campus</string>

    <!-- Strings adicionadas para corrigir resource linking -->
    <string name="warning_title">Unibus - Rota Indisponível</string>
    <string name="warning_date">24/01/2025</string>
    <string name="warning_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin imperdiet metus nec lacus dictum ultrices.</string>
    <string name="menu_home">Início</string>
    <string name="menu_prefs">Preferências</string>
    <string name="menu_support">Suporte</string>
    <string name="greeting_user">Olá, Usuário!</string>
    <string name="user_id">2121054</string>
    <string name="loading_subtitle">Carregando...</string>

</resources>
>>>>>>> 24b4973 (Feat: Concluindo todas as novas telas do Unibus)
